--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -68,5 +68,6 @@
     "showPhone": "Показать телефон",
     "seller": "Продавец",
     "location": "Местоположение",
-    "unshowPhone": "Скрыть телефон"
+    "unshowPhone": "Скрыть телефон",
+    "aboutApp" : "О приложении"
 }
