--- a/assets/translations/uz.json
+++ b/assets/translations/uz.json
@@ -68,5 +68,6 @@
     "showPhone": "Telefonni ko'rsatish",
     "seller": "Sotuvchi",
     "location": "Joylashgan joy",
-    "unshowPhone": "Telefonni yashirish"
+    "unshowPhone": "Telefonni yashirish",
+    "aboutApp" : "Ilova haqida"
 }
