--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -69,5 +69,7 @@
     "seller": "Продавец",
     "location": "Местоположение",
     "unshowPhone": "Скрыть телефон",
-    "aboutApp" : "О приложении"
+    "aboutApp" : "О приложении",
+    "logout" : "Выйти",
+    "filter" : "Фильтр"
 }
